# OptiCL

./: .gitignore  LICENSE  README.md  setup.cfg  setup.py
Examples/: Model Walkthrough and Verification.ipynb  Model_Verification.ipynb
Examples/Tests/: test_temp_mlp_mip.lp
Examples/WFP/: WFP case study with Pyomo.ipynb  WFP case study.ipynb
Examples/results/: v1_exp_performance.csv
notebooks/Chemotherapy/: Chemotherapy case study.ipynb  Chemotherapy robustness.ipynb  utils_gastric.py
notebooks/WFP/: WFP-diet.ipynb  (+11 more)
opticl/: ConstraintLearning.py  __init__.py  constraint_learning.py  embed_mip.py  embed_mip_gurobi.py  run_MLmodels.py
src/: embed_lp.py  embed_mip.py  embed_mip_gurobi.py  run_MLmodels.py  utils_ML.py
test/: 1_train_bootstrap_models.py  Model Wrapper Evaluation.ipynb  aggregate_experiments.py  mip_original.lp  mip_original_cart.lp  mip_original_linear.lp  mip_refactor_cart.lp  mip_refactor_july18_bs2.lp  mip_refactor_july23.lp  mip_refactor_july23_gbm.lp  mip_refactor_july23_rf.lp  mip_refactor_july23_viol.lp  model_wrapper.sh  model_wrapper_gbm.sh  model_wrapper_gbm_patch.sh  patch_aggregation.py  results_original_linear.csv  results_refactor_cart.csv  results_refactor_july18_bs2.csv  results_refactor_july23_gbm.csv  results_refactor_july23_rf.csv  results_refactor_july23_viol.csv  rf_example.xlsx  run_single.py  run_single_gbm.py  run_single_gbm_aug2023.py  run_single_gbm_aug2023_patch.py  run_single_nov22.py  run_time_limit_sep2023.py  simple_example.py  test_mip.py  test_mip_no_bootstrap.py  test_mip_single.py  test_mip_single_nominal.py
(+11112 files in other folders)
