[metadata]
name = opticl
version = 0.0.1
description = Mixed-integer optimization with constraint learning
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hwiberg/OptiCL
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires = 
    pandas
    scikit-learn
    pyomo
    matplotlib